--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/86d1196dac.js" crossorigin="anonymous"></script>
   <script src="script/script.js" defer></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
