--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/86d1196dac.js" crossorigin="anonymous"></script>
-  <script src="script/script.js" defer></script>
-  <script>
+  <script type = "module" src="script/script.js"></script>
+  <script type="module">
+    import { init } from './script/script.js';
     document.addEventListener('DOMContentLoaded', () => {
-      phoneBookInit('#app', 'Andrey');
+      init('#app', 'Andrey');
     });
   </script>
 </head>
